--- a/new.html
+++ b/new.html
@@ -10,5 +10,9 @@
     <p>
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae repellat rem voluptate obcaecati! Vero vel quas, nostrum, labore ipsum officiis, sequi qui dicta commodi libero incidunt minus? Nobis, aperiam saepe?
     </p>
+    <h2>hello bhai</h2>
+    <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas in atque consequatur magni soluta neque repudiandae? Dolore nemo repellendus ipsam accusamus! Doloremque veritatis, optio error officia cum numquam repellendus illo!
+    </p>
 </body>
 </html>
